--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -89,7 +89,7 @@
 {% block user-menu %}
     <li>
         <a href="{% url 'legalUser/information' %}"> <i class="glyphicon glyphicon-info-sign" id="main_user_info"></i>　用户信息</a>
-        <a href="{% url 'legalUser' %}"> <i class="glyphicon glyphicon-log-in" id="back_main"></i>　返回</a>
+        <a href="{% url 'legalUser' %}"> <i class="glyphicon glyphicon-log-in" id="back_main"></i>　返回主页</a>
         <a href="{% url 'guest' %}"> <i class="glyphicon glyphicon-log-out" id="main_log_agin" ></i>　注销</a>
     </li>
 {% endblock user-menu %}
