--- a/src/interface/templates/legalUser/login/log_page.html
+++ b/src/interface/templates/legalUser/login/log_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login Form</title>
+<title>注册用户登陆</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -206,7 +206,8 @@ h1 {
 	<div class="main">
 		<div class="login">
 			<div class="inset">
-				<form method="get">
+				<form method="post" >
+					{% csrf_token %}
 			         <div>
 			         	<h2>注册用户登录</h2>
 						<span><label>用户名:</label></span>
