--- a/src/interface/templates/legalUser/design/modal/single_modal.html
+++ b/src/interface/templates/legalUser/design/modal/single_modal.html
@@ -23,8 +23,8 @@
                         <div class="row" style="text-align: left;">
                             <div class="col-xs-12 form-group">
                                 <label class="control-label" for="single_title">标题</label>
-                                <textarea id="single_title_field" name="qst_title" class="form-control"
-                                          style="resize: vertical;"></textarea>
+                                <input id="single_title_field" name="qst_title" class="form-control"
+                                          style="resize: vertical;">
                             </div>
                         </div>
                         <hr>
