--- a/src/interface/templates/legalUser/design/design_list.html
+++ b/src/interface/templates/legalUser/design/design_list.html
@@ -14,9 +14,9 @@
                     {% endif %}
                 {% endblock title %}
             </h4>
-
-            <div class="col-xs-12" id="qst_description">
-                {% block description %}假装有活动说明{% endblock description %}
+            
+            <div class="col-xs-12 textarea_display" id="qst_description" style="width:100%">
+                </br>{% block description %}假装有活动说明{% endblock description %}
             </div>
         </div>
         <div style="display:none;" id="collapse-heading">
@@ -39,6 +39,27 @@
         </ol>
         {% block content-after %}
         {% endblock content-after %}
+
+        {% for qst in act_info.questions %}
+        
+            <script>
+                
+                pre_info_param = {
+                    'questions_type': '{{qst.qst_type}}',
+                    'questions_title': '{{qst.qst_title}}',
+                    'questions_id': '{{qst.qst_id}}',
+                    'option_num': '{{qst.option_num}}',
+                    'option': '{{qst.option}}'
+                }
+
+                loadContentOn($(".last-question"), "{% url 'legalUser/design/question' type act_id%}", pre_info_param, {anim: false, scroll: false});
+                $(".last-question").removeClass("last-question");
+                $(".questions-list").append('<li class="question last-question">\
+                                                \
+                                             </li>');
+            </script>
+        
+        {% endfor %}
    
 
 
@@ -46,6 +67,11 @@
 <script>
     var $heading_panel = $(".hover_heading");
     var heading = $(".heading");
+
+    if('{{act_info.act_title}}' != '')
+        $("#qst_title").html('{{act_info.act_title}}');
+    if('{{act_info.act_description}}' != '')
+        $("#qst_description").html('<br>{{act_info.act_description}}');
 
     function Edit_title() {
         params = {
