--- a/src/interface/templates/legalUser/information/user_information.ajax.html
+++ b/src/interface/templates/legalUser/information/user_information.ajax.html
@@ -2,7 +2,7 @@
 <div class="top-row hidden-xs">
     <a>&nbsp</a>
     <a class="fake-link pull-right">
-        <strong>信息概览　<i class="fa fa-dashboard fa-fw"></i></strong>
+        <strong>信息展示<i class="fa fa-dashboard fa-fw"></i></strong>
     </a>
 </div>
 <hr class="hidden-xs">
