--- a/src/interface/templates/legalUser/information/user_information.html
+++ b/src/interface/templates/legalUser/information/user_information.html
@@ -20,11 +20,11 @@
         <ul class="nav nav-stacked collapse in nav-pills">
             <li id="info-item-1" class="nav-header left-column-item"
                 data-url="{% url 'legalUser/information' %}">
-                <a class="fake-link"><i class="fa fa-dashboard fa-fw"></i>　信息概览</a>
+                <a class="fake-link"><i class="fa fa-dashboard fa-fw"></i>　信息展示</a>
             </li>
             <li id="info-item-2" class="nav-header left-column-item"
                 data-url="{% url 'legalUser/information_change' %}">
-                <a class="fake-link"><i class="fa fa-wrench fa-fw"></i>　用户信息修改</a>
+                <a class="fake-link"><i class="fa fa-wrench fa-fw"></i>　信息修改</a>
         </ul>
     </ul>
     <hr>
