--- a/src/interface/templates/legalUser/login/log_page.html
+++ b/src/interface/templates/legalUser/login/log_page.html
@@ -122,6 +122,13 @@ input[type="text"]:hover, input[type="Password"]:hover, #active {
 	border: none;
 	outline: none;
 }
+
+a{
+    font-size: 0.7em;
+    float: right;
+    margin-top: 6%;
+}
+
 .sign {
 	padding: 10px 0 0;
 	text-align: center;
@@ -230,15 +237,16 @@ h1 {
 			         <div>
 			         	<h2>注册用户登录</h2>
 						<span><label>用户名:</label></span>
-						<span><input type="text" class="textbox" name='log_username:' placeholder="username" required="required"></span>
+						<span><input type="text" class="textbox" name='log_username:' placeholder="username" onfocus="this.placeholder=''" onblur="this.placeholder='username'" required="required"></span>
 					 </div>
 					 <div>
 						<span><label>密码:</label></span>
-					    <span><input type="password" class="password" name='log_password' placeholder="password" required="required"></span>
+					    <span><input type="password" class="password" name='log_password' placeholder="password" onfocus="this.placeholder=''" onblur="this.placeholder='password'" required="required"></span>
 					 </div>
 					<div class="sign">
                         <input type="submit" value="确定" class="submit" />
 					</div>
+                    <a href="{% url 'guest' %}">不是注册用户?</a>
 					</form>
 				</div>
 			</div>
@@ -247,7 +255,6 @@ h1 {
 </html>
 
 <script>
-
     $(document).ready(function () {
             handleFormPost("#login_form", "{% url 'api/login_act' %}", {
                 success_callback: function (data) {
