add multi questions and fillin questions

--- a/src/interface/templates/legalUser/design/design.ajax.html
+++ b/src/interface/templates/legalUser/design/design.ajax.html
@@ -156,11 +156,11 @@
             <hr>
             <br>
             <li align="center">
-                <button type="button" class="btn btn-success btn-block" id="save_btn" style="font-size: 15px">保存</button>
+                <button type="button" class="btn btn-block" id="save_btn" style="font-size: 15px;background: #18bc9c;color: #FFF;">保存</button>
             </li>
             <br>
             <li align="center">
-                <button type="button" class="btn btn-default btn-block" id="publish_btn" style="font-size: 15px">发布</button>
+                <button type="button" class="btn btn-default btn-block" id="publish_btn" style="font-size: 15px;">发布</button>
             </li>
 
         </ul>
