--- a/src/interface/templates/legalUser/login/log_page.html
+++ b/src/interface/templates/legalUser/login/log_page.html
@@ -11,6 +11,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/fonts.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/eden.min.css' %}" rel="stylesheet">
+    <link href="{% static 'animate/css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'base/css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'icheck-1.x/skins/all.css' %}" rel="stylesheet">
+
+    {% block css %}
+    {% endblock css %}
+
     <script src="{% static 'jquery/jquery.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.history.min.js' %}"></script>
     <script src="{% static 'jquery/jquery.scrollto.min.js' %}"></script>
@@ -262,7 +273,7 @@ h1 {
                         window.location.href = '{% url 'legalUser' %}';
                     }
                     else{
-                        alert("wrong username or password")
+                        alert("用户名或密码错误")
                     }
                 }
             });
