--- a/src/interface/templates/questionnaire/questionnaire_list.html
+++ b/src/interface/templates/questionnaire/questionnaire_list.html
@@ -4,19 +4,11 @@
     <div class="panel-body heading">
         <div class="row">
             <h4 class="col-xs-12" align="center" id="qst_title">
-                {% block title %}
-                    {% if type == 'enroll' %}
-                        XX活动报名
-                    {% elif type == 'recruit' %}
-                        XX实验志愿者招募
-                    {% elif type == 'vote' %}
-                        票选最XXXX
-                    {% endif %}
-                {% endblock title %}
+                    {{act_info.act_title}}
             </h4>
 
             <div class="col-xs-12 textarea_display" id="qst_description" style="width:100%">
-                </br>{% block description %}假装有活动说明{% endblock description %}
+                </br>{{act_info.act_description}}
             </div>
         </div>
 
@@ -25,22 +17,29 @@
 </div>
         {% block content-before %}
         {% endblock content-before %}
+        <form id="questionnaire-submit-form" class="form form-vertical" role="form" data-toggle="validator">
+            {% csrf_token %}
+            <input name="status" value="none" type="text" style="display: none;">
+            <input name="act_id" type="text" style="display: none;" value="{{id}}">
         <ol class="questions-list">
             <li class="question last-question">
 
             </li>
         </ol>
+
         <hr>
-            <div align="center">
-                <button type="button" class="btn btn-success btn-block" id="commit_btn" style="font-size: 15px">提交</button>
+            <div id="submit-button-field">
+                <button type="submit" class="btn btn-success btn-block" style="font-size: 15px">提交</button>
             </div>
+
+        </form>
         {% block content-after %}
         {% endblock content-after %}
 
         {% for qst in act_info.questions %}
-        
+
             <script>
-                
+
                 pre_info_param = {
                     'questions_type': '{{qst.qst_type}}',
                     'questions_title': '{{qst.qst_title}}',
@@ -57,28 +56,14 @@
                                                 \
                                              </li>');
             </script>
-        
+
         {% endfor %}
-   
 
 
 
 <script>
     var $heading_panel = $(".hover_heading");
     var heading = $(".heading");
-
-    if('{{act_info.act_title}}' != '')
-        $("#qst_title").html('{{act_info.act_title}}');
-    if('{{act_info.act_description}}' != '')
-        $("#qst_description").html('<br>{{act_info.act_description}}');
-
-    function Edit_title() {
-        params = {
-            'modal_type': 'qst_name',
-            'id': '{{ act_id }}',
-        }
-        showModal('{% url 'legalUser/modal' %}', 'activity-modal', params);
-    }
 
     $heading_panel.ready(function() {
         heading.hover(function(){
