--- a/src/interface/templates/legalUser/design/modal/publish_modal.html
+++ b/src/interface/templates/legalUser/design/modal/publish_modal.html
@@ -42,7 +42,7 @@
 
     modal.ready(function () {
 
-        url_field.val("{% url 'questionnaire' id %}");
+        url_field.val("127.0.0.1:8000" + "{% url 'questionnaire' id %}");
 
     });
 </script>
