--- a/src/interface/templates/legalUser/index.html
+++ b/src/interface/templates/legalUser/index.html
@@ -73,11 +73,10 @@
                 </a>
             </li>
             <li id="statistics-list-item" class="nav-header left-column-item"
-                data-url="{% url 'test' %}">
+                data-url="{% url 'statistics' %}">
                 <a class="fake-link"><i class="fa fa-bar-chart fa-fw"></i>　统计信息</a>
             </li>
             <li id="empty-item1" class="nav-header left-column-item">
-                <a class="fake-link"></a>
             </li>
 
         </ul>
