--- a/src/interface/templates/legalUser/dashboard.ajax.html
+++ b/src/interface/templates/legalUser/dashboard.ajax.html
@@ -33,7 +33,7 @@
                 <h4>待发布报名<span class="badge pull-right">{{ pending_applications|length }}</span></h4></div>
             <div class="panel-body">
                 <div class="table-responsive">
-                    <table class="table table-striped">
+                    <table class="table table-striped" id="pending-table">
                         <thead>
                         <tr>
                             <th style="width: 15%; min-width: 150px">活动名称</th>
@@ -67,13 +67,13 @@
                                         <div id="pending{{forloop.counter}}" class="operation" style="display:none; width: 100%">
                                             <ul>
                                                 <li style="width: 25%" align="center">
-                                                    <a class="fake-link" href="javascript:loadContent('{% url 'legalUser/design/id' app.type app.id %}',
+                                                    <a class="fake-link" href="javascript:loadContent('{% url 'legalUser/design/id' app.type app.id%}',
                                                      {}, '#' + '{{app.type}}' + '-design-item')" >
                                                         <i class="fa fa-pencil-square-o fa-fw fa-2x" aria-hidden="true"></i> 修改
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="center">
-                                                    <a class="fake-link" href="#" >
+                                                    <a class="fake-link" href="javascript:publish_act('{{ app.id }}', '{% url 'api/publish_act' %}', '{% url 'legalUser/modal' %}')" >
                                                         <i class="fa fa-file-text-o fa-fw fa-2x" aria-hidden="true"></i> 发布
                                                     </a>
                                                 </li>
@@ -83,7 +83,7 @@
                                                     </a>
                                                 </li>
                                                 <li style="width: 25%" align="center">
-                                                    <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}')">
+                                                    <a class="fake-link" href="javascript:remove_act('{{app.id}}', '{% url 'api/remove_act' %}', '#dashboard-item')">
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
@@ -175,7 +175,7 @@
                                                     </a>
                                                 </li>
                                                 <li style="width: 30%" align="center">
-                                                    <a class="fake-link" href="javascript:showConfirmModal('删除报名', '确定要删除吗？')" >
+                                                    <a class="fake-link" href="javascript:remove_act('{{activity.id}}', '{% url 'api/remove_act' %}', '#dashboard-item')" >
                                                         <i class="fa fa-trash fa-fw fa-2x" aria-hidden="true"></i> 删除
                                                     </a>
                                                 </li>
@@ -187,7 +187,7 @@
                             {% endfor %}
                         {% else %}
                             <tr>
-                                <td colspan="10000" style="text-align: center">暂无文章</td>
+                                <td colspan="10000" style="text-align: center">暂无已发布报名</td>
                             </tr>
                         {% endif %}
                         </tbody>
@@ -267,7 +267,7 @@
                             {% endfor %}
                         {% else %}
                             <tr>
-                                <td colspan="10000" style="text-align: center">暂无公众号</td>
+                                <td colspan="10000" style="text-align: center">暂无近期报名</td>
                             </tr>
                         {% endif %}
                         </tbody>
