--- a/src/interface/templates/questionnaire/questionnaire_list.html
+++ b/src/interface/templates/questionnaire/questionnaire_list.html
@@ -4,15 +4,7 @@
     <div class="panel-body heading">
         <div class="row">
             <h4 class="col-xs-12" align="center" id="qst_title">
-                {% block title %}
-                    {% if type == 'enroll' %}
-                        XX活动报名
-                    {% elif type == 'recruit' %}
-                        XX实验志愿者招募
-                    {% elif type == 'vote' %}
-                        票选最XXXX
-                    {% endif %}
-                {% endblock title %}
+
             </h4>
 
             <div class="col-xs-12 textarea_display" id="qst_description" style="width:100%">
@@ -51,6 +43,10 @@
                     'hint':'{{ qst.hint }}'
                 }
 
+                if('{{ fillin_id }}' != '') {
+                    pre_info_param['fillin_id'] = '{{ fillin_id }}';
+                }
+
                 loadContentOn($(".last-question"), "{% url 'questionnaire/publish_qst' type act_id%}", pre_info_param, {anim: false, scroll: false});
                 $(".last-question").removeClass("last-question");
                 $(".questions-list").append('<li class="question last-question">\
@@ -72,24 +68,14 @@
     if('{{act_info.act_description}}' != '')
         $("#qst_description").html('<br>{{act_info.act_description}}');
 
-    function Edit_title() {
-        params = {
-            'modal_type': 'qst_name',
-            'id': '{{ act_id }}',
-        }
-        showModal('{% url 'legalUser/modal' %}', 'activity-modal', params);
-    }
-
     $heading_panel.ready(function() {
         heading.hover(function(){
             $heading_panel.removeClass("panel-default");
             $heading_panel.addClass("panel-success");
-            $("#collapse-heading").slideDown("fast");
         }, 
         function(){
             $heading_panel.removeClass("panel-success");
             $heading_panel.addClass("panel-default");
-            $("#collapse-heading").slideUp("fast");
         })
       
     })
