添加所有活动表格

--- a/src/interface/templates/common/sortable.html
+++ b/src/interface/templates/common/sortable.html
@@ -15,6 +15,7 @@
             $this.addClass("no-search");
         // declare global
         sort_url = defaults.url;
+        // alert(sort_url);
         delete defaults.url;
         sort_params = defaults;
 
